<resources>
    <string name="app_name">Akchday1</string>
    <string name="main_text">My First Application</string>
    <string name="student_info">Student: Akchibash\nGroup: 3.2Isip2</string>
    <string name="avatar_description">Аватар автора</string>
    <string name="menu_description">Меню</string>
    <string name="like_description">Нравится</string>
    <string name="share_description">Поделиться</string>
    <string name="views_description">Просмотры</string>
    <string name="moytext">Шикарная победа над принципиальным соперником! Выиграли 3:2, отыгравшись с 0:2 по партиям. Команда проявила характер. Лучшим игроком матча признан наш диагональный, набравший 28 очков. Спасибо болельщикам за поддержку!</string>
    <string name="text1">Волейбольный клуб "Зенит-Казань"</string>
    <string name="text2">Сегодня в 20:45</string>
    <string name="text3">Зенит - Локомотив: видео лучших моментов</string>
    <string name="text4">volley.ru</string>
    <string name="text5">25</string>
    <string name="text6">150</string>
    <string name="text7">1.2К</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>
    <string name="post_hint">Что у вас нового?</string>
    <string name="save_post">Опубликовать</string>
    <string name="cancel_edit_hint">Редактирование...</string>
    <string name="cancel_edit">Отменить</string>
    <string name="add_post">Добавить пост</string>
    <string name="edit_post_title">Новый пост</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="edit_post_edit_title">Редактировать пост</string>
    <string name="error_empty_content">Текст не может быть пустым</string>
    <string name="play_video">Воспроизвести видео</string>
    <string name="open_external">Открыть во внешнем приложении</string>
    <string name="error_no_video_app">Не найдено приложение для просмотра видео</string>
    <string name="error_cannot_open_video">Не удалось открыть видео</string>
    <string name="share_post_via">Поделиться через</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_removed">Пост удалён!</string>

</resources>