<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A3DC97"
        android:padding="16dp">


        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/text1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="@id/author"
            app:layout_constraintStart_toStartOf="@id/author"
            app:layout_constraintTop_toBottomOf="@id/author" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.MenuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/menu_description"
            app:icon="@drawable/ic_menu"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/avatar" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar,author,published,menu" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/moytext"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <FrameLayout
            android:id="@+id/videoContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/link_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#009688"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/videoContainer" >

            <TextView
                android:id="@+id/link_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text3"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/link_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text4"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link_block" >


            <com.google.android.material.button.MaterialButton
                android:id="@+id/like"
                style="@style/Widget.AppTheme.LikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/like_description"
                android:text="0"
                app:icon="@drawable/ic_favorite_border"
                app:iconGravity="textStart" />


            <!-- Кнопка репоста -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/share"
                style="@style/Widget.AppTheme.ShareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/share_description"
                android:text="0"
                app:icon="@drawable/ic_share"
                app:iconGravity="textStart" />


            <!-- Кнопка просмотров (не кликабельная, просто для отображения) -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/views"
                style="@style/Widget.AppTheme.ShareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="false"
                android:contentDescription="@string/views_description"
                android:focusable="false"
                android:text="0"
                app:icon="@drawable/ic_visibility"
                app:iconGravity="textStart" />

        </LinearLayout>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/avatar_description"
            android:src="@drawable/avatar1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.AppTheme.Circle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>